tests/frontend/fail/missingdef1.act
contract Fail

constructor
interface constructor()

creates

	uint x := 0
	uint y := 2

// should fail to typecheck because x & y have not been declared in a storage block
transition g
interface g()

returns x + y
